three animation applied for desktop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 
 <body>
+	<nav class="nav-bar">
+		<img src="assets/images/logo.svg">
+		<button class="button-bar">Buy now</button>
+	</nav>
+
+	<section class="section first">
+		<h1>Perfect<br>Drill</h1>
+	</section>
+
+	<section class="section second">
+		<h2>Confortable to use</h2>
+	</section>
+
+	<section class="section third">
+		<h2>Third section</h2>
+	</section>
+
 	<div id="webgi-canvas-container">
 		<canvas id="webgi-canvas"></canvas>
 	</div>
